k8s-yamls-master/k8s-yamls-master/old-archive/argocd/6-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    # kubernetes.io/ingress.class: nginx
  name: argocd-lab.medimpact.com
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
  - host: argocd-lab.medimpact.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: argocd-server
            port:
              number: 443
        path: /
  tls:
  - hosts:
    - argocd-lab.medimpact.com
